--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,22 @@ environment:
   sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
+  dio: ^5.5.0+1
+  fast_cached_network_image: ^1.2.9
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
+  flutter_riverpod: ^2.5.1
+  http: ^1.2.1
+  path_provider: ^2.1.3  
+  share_plus: ^9.0.0
+  shared_preferences: ^2.2.3
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
