--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0  
+  flutter_markdown: ^0.7.3
   flutter_riverpod: ^2.5.1
   http: ^1.2.1
   path_provider: ^2.1.3  
