--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,13 @@ dependencies:
   fast_cached_network_image: ^1.2.9
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_dotenv: ^5.1.0  
   flutter_markdown: ^0.7.3
   flutter_riverpod: ^2.5.1
   http: ^1.2.1
+  intl: ^0.19.0
   path_provider: ^2.1.3  
   share_plus: ^9.0.0
   shared_preferences: ^2.2.3
@@ -26,11 +29,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
   assets:
-    - assets/images/  
+    - assets/images/
     - assets/files/
     - assets/fonts/
-    - assets/.env 
+    - assets/.env
   fonts:
     - family: Nunito
       fonts:
@@ -38,4 +42,3 @@ flutter:
     - family: MajorMonoDisplay
       fonts:
         - asset: assets/fonts/MajorMonoDisplay-Regular.ttf
-
