--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: phototook
-description: "Meta search engine for photos on the best image platforms and resources."
+description: "Photo metasearch engine: Search in the best image banks, find in PhotoTook."
 publish_to: 'none'
 version: 0.1.0
 
