--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,8 @@ dependencies:
   path_provider: ^2.1.3  
   share_plus: ^9.0.0
   shared_preferences: ^2.2.3
-  url_launcher: ^6.3.0
+  url_launcher: ^6.3.0  
+  file_picker: ^8.0.6
   
 dev_dependencies:
   flutter_test:
